--- a/howTo/page/evrodom/scss/index.scss
+++ b/howTo/page/evrodom/scss/index.scss
@@ -8,7 +8,7 @@
 
 a {
     text-decoration: none;
-    color: black;
+    color: #252A34;
     font-size: 2em;
     font-weight: 400;
 }
@@ -17,9 +17,11 @@ a {
 
 .topNav {
     display: grid;
+    position: absolute;
+    width: 100%;
     grid-template-columns: 200px 1fr 300px;
     align-items: center;
-    background-color: rgba(92, 88, 88, 0.164);
+    background-color: rgba(234,234,234,0.7);
     overflow: hidden;
 }
 
@@ -31,6 +33,11 @@ a {
     content: '\f879';
     font-family: fontawesome;
     margin-right: 1em;
+    color: #FF2E63;
+}
+
+.topNav__phone {
+    color: #FF2E63;
 }
 
 .topNav__icon {
@@ -43,6 +50,7 @@ a {
 .fa-bars {
     font-family: fontawesome;
     font-size: 4rem;
+    color: #252A34;
 }
 
 
@@ -111,7 +119,7 @@ a {
     width: 100%;
     height: 2px;
 
-    background-color: #616161;
+    background-color: #FF2E63;
 
     transition-duration: .25s;
 }
@@ -151,7 +159,7 @@ a {
     display: block;
     padding: 12px 24px;
 
-    color: #333;
+    color: #252A34;
 
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
@@ -163,7 +171,7 @@ a {
 }
 
 .menu__item:hover {
-    background-color: #CFD8DC;
+    background-color: #EAEAEA;
 }
 
 
@@ -180,7 +188,7 @@ header {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    @media screen and (max-width: 1500px){
+    @media screen and (max-width: 700px){
         background-position-x: -180px;;
     }
 }
@@ -195,13 +203,13 @@ header {
 .header__link {
     font-size: 3em;
     background-color: white;
-    color: rgb(204, 76, 76);
+    color: #FF2E63;
     padding: 15px 10px;
     border-radius: 10px;
-    border: 1px solid rgb(204, 76, 76);
+    border: 1px solid #FF2E63;
 
     &:hover {
-        background-color: rgb(204, 76, 76);
+        background-color: #FF2E63;
         color: white;
     }
 
