--- a/howTo/page/evrodom/css/index.css
+++ b/howTo/page/evrodom/css/index.css
@@ -561,9 +561,15 @@ header {
 .w72__title {
   display: block;
   text-align: center;
-  font-size: 3em;
+  font-size: 4em;
   font-weight: 600;
   margin: 5rem 0;
+}
+
+@media screen and (max-width: 1200px) {
+  .w72__title {
+    font-size: 2.5em;
+  }
 }
 
 .w72__mainInfo {
@@ -571,25 +577,51 @@ header {
   align-items: center;
 }
 
+@media screen and (max-width: 770px) {
+  .w72__mainInfo {
+    flex-direction: column;
+  }
+}
+
 .w72__mainInfo__img {
   display: block;
   width: 45%;
+  min-width: 300px;
   background-size: contain;
 }
 
 .w72__mainInfo__container__text {
   display: block;
-  font-size: 2em;
-  margin-left: 2em;
+  font-size: 3em;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+@media screen and (max-width: 1675px) {
+  .w72__mainInfo__container__text {
+    font-size: 2.5em;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .w72__mainInfo__container__text {
+    font-size: 2em;
+  }
 }
 
 /*стилизация  F50*/
 .f50__title {
   display: block;
   text-align: center;
-  font-size: 3em;
+  font-size: 4em;
   font-weight: 600;
   margin: 5rem 0;
+}
+
+@media screen and (max-width: 1200px) {
+  .f50__title {
+    font-size: 2.5em;
+  }
 }
 
 .f50__mainInfo {
@@ -598,24 +630,50 @@ header {
   background-size: contain;
 }
 
+@media screen and (max-width: 770px) {
+  .f50__mainInfo {
+    flex-direction: column-reverse;
+  }
+}
+
 .f50__mainInfo__img {
   display: block;
   width: 45%;
+  min-width: 300px;
 }
 
 .f50__mainInfo__container__text {
   display: block;
-  font-size: 2em;
-  margin-left: 2em;
+  font-size: 3em;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+@media screen and (max-width: 1675px) {
+  .f50__mainInfo__container__text {
+    font-size: 2.5em;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .f50__mainInfo__container__text {
+    font-size: 2em;
+  }
 }
 
 /*система sl160*/
 .sl160__title {
   display: block;
   text-align: center;
-  font-size: 3em;
+  font-size: 4em;
   font-weight: 600;
   margin: 5rem 0;
+}
+
+@media screen and (max-width: 1200px) {
+  .sl160__title {
+    font-size: 2.5em;
+  }
 }
 
 .sl160__mainInfo {
@@ -624,14 +682,34 @@ header {
   background-size: contain;
 }
 
+@media screen and (max-width: 770px) {
+  .sl160__mainInfo {
+    flex-direction: column;
+  }
+}
+
 .sl160__mainInfo__img {
   display: block;
   width: 45%;
+  min-width: 300px;
 }
 
 .sl160__mainInfo__container__text {
   display: block;
-  font-size: 2em;
-  margin-left: 2em;
+  font-size: 3em;
+  margin-left: 1em;
+  margin-right: 1em;
+}
+
+@media screen and (max-width: 1675px) {
+  .sl160__mainInfo__container__text {
+    font-size: 2.5em;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .sl160__mainInfo__container__text {
+    font-size: 2em;
+  }
 }
 /*# sourceMappingURL=index.css.map */
