--- a/howTo/page/evrodom/css/index.css
+++ b/howTo/page/evrodom/css/index.css
@@ -370,11 +370,11 @@ a {
   content: '\f879';
   font-family: fontawesome;
   margin-right: 1em;
-  color: #FF2E63;
+  color: #9b0000;
 }
 
 .topNav__phone {
-  color: #FF2E63;
+  color: #9b0000;
 }
 
 .topNav__icon {
@@ -450,7 +450,7 @@ a {
   position: absolute;
   width: 100%;
   height: 2px;
-  background-color: #FF2E63;
+  background-color: #9b0000;
   transition-duration: .25s;
 }
 
@@ -525,21 +525,15 @@ header {
 .header__link {
   font-size: 3em;
   background-color: white;
-  color: #FF2E63;
+  color: #9b0000;
   padding: 15px 10px;
   border-radius: 10px;
-  border: 1px solid #FF2E63;
+  border: 1px solid #9b0000;
 }
 
 .header__link:hover {
-  background-color: #FF2E63;
+  background-color: #9b0000;
   color: white;
-}
-
-@media screen and (max-width: 1180px) {
-  .header__title {
-    font-size: 6em;
-  }
 }
 
 @media screen and (max-width: 1255px) {
@@ -548,11 +542,17 @@ header {
   }
 }
 
-@media screen and (max-width: 460px) {
+@media screen and (max-width: 563px) {
   .header__title {
     font-size: 2.5em;
   }
   .header__link {
+    font-size: 2em;
+  }
+}
+
+@media screen and (max-width: 349px) {
+  .header__title {
     font-size: 2em;
   }
 }
@@ -711,5 +711,61 @@ header {
   .sl160__mainInfo__container__text {
     font-size: 2em;
   }
+}
+
+/*стилизация преимуществ*/
+.advantages__title {
+  display: block;
+  text-align: center;
+  font-size: 4em;
+  font-weight: 600;
+  margin: 5rem 0;
+}
+
+@media screen and (max-width: 1200px) {
+  .advantages__title {
+    font-size: 2.5em;
+  }
+}
+
+.advantages__items {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 1em;
+}
+
+@media screen and (max-width: 1300px) {
+  .advantages__items {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .advantages__items {
+    grid-template-columns: 1fr;
+  }
+}
+
+.advantages__item {
+  display: flex;
+  flex-direction: column;
+}
+
+.advantages__item__title {
+  font-size: 2em;
+  text-align: center;
+}
+
+.fas {
+  font-family: fontawesome;
+  text-align: center;
+  font-size: 6em;
+  color: #9b0000;
+}
+
+ul.advantages__item__text > li {
+  font-size: 2em;
+  list-style: none;
+  padding: .4em 0;
 }
 /*# sourceMappingURL=index.css.map */
