--- a/howTo/page/evrodom/scss/index.scss
+++ b/howTo/page/evrodom/scss/index.scss
@@ -413,3 +413,47 @@ ul.advantages__item__text > li {
     list-style: none;
     padding: .4em 0;
 }
+
+/*стилизация проектов*/
+
+.projects__title {
+    display: block;
+    text-align: center;
+    font-size: 4em;
+    font-weight: 600;
+    margin: 5rem 0;
+    @media screen and (max-width: 1200px){
+        font-size: 2.5em;
+    }  
+}
+
+.projects__subtitle {
+    display: block;
+    color: #9b0000;
+    text-align: center;
+    font-size: 3em;
+    font-weight: 600;
+    margin: 5rem 0;
+    @media screen and (max-width: 1200px){
+        font-size: 1.5em;
+    }
+}
+
+.projects__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 2em;
+    justify-items: center;
+    @media screen and (max-width: 2300px) {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+    @media screen and (max-width: 1500px) {
+        grid-template-columns: 1fr 1fr 1fr ;
+    }
+    @media screen and (max-width: 1200px) {
+        grid-template-columns: 1fr 1fr;
+    }
+    @media screen and (max-width: 800px) {
+        grid-template-columns: 1fr;
+    }
+}
