add contact for evrodom

--- a/howTo/page/evrodom/css/index.css
+++ b/howTo/page/evrodom/css/index.css
@@ -829,4 +829,9 @@ ul.advantages__item__text > li {
     grid-template-columns: 1fr;
   }
 }
+
+/*стилизация контактов*/
+.contact__phone {
+  color: #9b0000;
+}
 /*# sourceMappingURL=index.css.map */
