--- a/howTo/page/evrodom/scss/index.scss
+++ b/howTo/page/evrodom/scss/index.scss
@@ -457,3 +457,9 @@ ul.advantages__item__text > li {
         grid-template-columns: 1fr;
     }
 }
+
+/*стилизация контактов*/
+
+.contact__phone {
+    color: #9b0000;
+}
