--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Swanky+and+Moo+Moo&display=swap');
+
 *,
 *:after,
 *:before {
@@ -18,7 +19,6 @@ h6 {
 
 .container {
 	width: 100%;
-	max-width: 1200px;
 	margin: 0 auto;
 
 }
@@ -43,11 +43,11 @@ header {
 	display: block;
 	width: 400px;
 	height: 400px;
+
 }
 
 .my_name {
 	margin-top: 20px;
-	width: 1200px;
 
 	display: block;
 	font-family: 'Swanky and Moo Moo', cursive;
@@ -57,7 +57,6 @@ header {
 
 .my_position {
 	display: block;
-	width: 1000px;
 	height: 60px;
 	font-family: 'Kaushan Script', cursive;
 	font-size: 40px;
@@ -78,20 +77,21 @@ header {
 
 .skills {
 	display: flex;
-	justify-content: center;
-	width: 1200px;
-	height: 350px;
+	justify-content: space-around;
+	
 }
 
 .skills__hard {
-	display: block;
-	width: 40%;
+	display: flex;
+	flex-direction: column;
+	
 	text-align: center;
 }
 
 .skills__soft {
-	display: block;
-	width: 40%;
+	display: flex;
+	flex-direction: column;
+	
 	text-align: center;
 }
 
@@ -99,6 +99,7 @@ ul {
 	list-style: none;
 	font-family: 'Swanky and Moo Moo', cursive;
 	font-size: 30px;
+	text-align: center;
 }
 
 a.projects-link {
@@ -122,7 +123,8 @@ a.projects-link {
 /*Animation*/
 
 .my_position {
-	animation: my_position 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;;
+	animation: my_position 3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	;
 }
 
 .my_name {
@@ -131,82 +133,101 @@ a.projects-link {
 
 @keyframes my_position {
 	0% {
-	  letter-spacing: -0.5em;
-	  -webkit-transform: translateZ(-800px);
-			  transform: translateZ(-800px);
-	  -webkit-filter: blur(12px);
-			  filter: blur(12px);
-	  opacity: 0;
+		letter-spacing: -0.5em;
+		-webkit-transform: translateZ(-800px);
+		transform: translateZ(-800px);
+		-webkit-filter: blur(12px);
+		filter: blur(12px);
+		opacity: 0;
 	}
-	100% {
-	  -webkit-transform: translateZ(0);
-			  transform: translateZ(0);
-	  -webkit-filter: blur(0);
-			  filter: blur(0);
-	  opacity: 1;
-	}
-  }
-  @keyframes my_name {
-	0% {
-	  letter-spacing: -0.5em;
-	  -webkit-transform: translateZ(-800px);
-			  transform: translateZ(-800px);
-	  -webkit-filter: blur(12px);
-			  filter: blur(12px);
-	  opacity: 0;
-	}
-	100% {
-	  -webkit-transform: translateZ(0);
-			  transform: translateZ(0);
-	  -webkit-filter: blur(0);
-			  filter: blur(0);
-	  opacity: 1;
-	}
-  }
 
-  @media (max-width: 768px) {
+	100% {
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+		-webkit-filter: blur(0);
+		filter: blur(0);
+		opacity: 1;
+	}
+}
+
+@keyframes my_name {
+	0% {
+		letter-spacing: -0.5em;
+		-webkit-transform: translateZ(-800px);
+		transform: translateZ(-800px);
+		-webkit-filter: blur(12px);
+		filter: blur(12px);
+		opacity: 0;
+	}
+
+	100% {
+		-webkit-transform: translateZ(0);
+		transform: translateZ(0);
+		-webkit-filter: blur(0);
+		filter: blur(0);
+		opacity: 1;
+	}
+}
+
+@media (max-width: 768px) {
 
 	header {
 		margin-bottom: 70px;
 	}
-	
+
 	.container {
 		width: 100%;
 	}
 
-	  .my_name {
-		  font-size: 20px;
-		  width: 100%;
-		  height: 40px;
+	.my_name {
+		font-size: 20px;
+		width: 100%;
+		height: 40px;
 
-	  }
+	}
 
-	  .my_position {
-		  font-size: 18px;
-		  width: 200px;
-		  height: 30px;
-	  }
-
-	  .header__face {
-		  height: 100px;
-		  width: 100px;
-		  margin: 0 auto;
-	  }
-
-	  .header__mySocialWrapper {
+	.my_position {
+		font-size: 18px;
 		width: 200px;
 		height: 30px;
-	  }
+	}
 
-	  .header__mySocialWrapper img {
-		  width: 30px;
-		  height: 30px;
-	  }
+	.header__face {
+		height: 100px;
+		width: 100px;
+		margin: 0 auto;
+	}
 
-	  .skills {
-		  width: 100%;
-		  flex-direction: column;
-		  align-items: center;
-	  }
-  }
-  
+	.header__mySocialWrapper {
+		width: 200px;
+		height: 30px;
+	}
+
+	.header__mySocialWrapper img {
+		width: 30px;
+		height: 30px;
+	}
+
+	.skills {
+		width: 100%;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.skills h2 {
+		font-size: 14px;
+	}
+
+	.skills li {
+		font-size: 14px;
+	}
+
+	.projects__title {
+		font-size: 14px;
+	}
+
+	a.projects-link {
+		font-size: 14px;
+	}
+}
