--- a/howTo/page/SoundMusic/scss/index.scss
+++ b/howTo/page/SoundMusic/scss/index.scss
@@ -8,6 +8,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
+.container {
+    width: 1920px;
+    margin: 0 auto;
+}
+
 .topNav {
     width: 1920px;
     height: 90px;
@@ -39,7 +44,7 @@
 }
 
 header {
-    width: 1920px;
+    position: relative;
     height: 1080px;
     background: linear-gradient(180deg, #DC5352 0%, #802322 100%);
 }
@@ -85,3 +90,120 @@ header {
     border-bottom: 2px solid #F14A48;
 }
 
+.header__link {
+    display: block;
+    width: 320px;
+    text-align: center;
+    margin-left: 405px;
+    margin-top: 50px;
+    font-size: 1.6em;
+    line-height: 19px;
+    color: white;
+    padding: 26px 37px;
+    border-radius: 20px;
+    background-color: #F14A48;
+    text-decoration: none;
+}
+
+.header__woman {
+    position: absolute;
+    top: 100px;
+    left: 900px;
+}
+
+.header__container {
+    display: flex;
+    width: 1920px;
+    margin-top: 400px;
+    align-items: center;
+    justify-content: center;
+}
+
+.item {
+    display: flex;
+    align-items: center;
+    margin-left: 50px;
+}
+
+.item__number {
+    font-size: 9em;
+    color: white;
+}
+
+.item__title {
+    font-size: 2em;
+    color: white;
+    font-weight: bold;
+}
+
+.item__text {
+    font-size: 1.6em;
+    color: white;
+}
+
+
+.information__wraper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 500px;
+
+}
+
+.information__item h3, .information__item p {
+    display: block;
+}
+
+.information__title {
+    margin-top: 72px;
+    font-size: 2.8em;
+    text-align: center;
+    line-height: 33px;
+}
+
+.information__item {
+    width: 300px;
+    height: 280px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background: #FCFCFC;;
+    margin-left: 50px;
+}
+
+.information__item h3 {
+    margin-left: 50px;
+    font-size: 2em;
+    font-weight: bold;
+}
+
+.information__item p {
+    font-size: 1.4em;
+    margin-left: 50px;
+}
+
+.active {
+    
+    background-image: url(../img/item.png);
+    filter: drop-shadow(16px 16px 2px red);
+}
+
+footer {
+    height: 80px;
+    background-color: #751818;
+    display: flex;
+    color: white;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.footer__nav a {
+    text-decoration: none;
+    font-size: 1.4em;
+    color: white;
+    margin-left: 50px;
+}
+
+footer p {
+    font-size: 1.4em;
+}
