--- a/howTo/page/evrodom/css/index.css
+++ b/howTo/page/evrodom/css/index.css
@@ -799,35 +799,20 @@ ul.advantages__item__text > li {
   }
 }
 
-.projects__container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 2em;
-  justify-items: center;
+/*add swiperJS*/
+.swiper-container {
+  width: 100%;
+  height: 100%;
 }
 
-@media screen and (max-width: 2300px) {
-  .projects__container {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
-}
-
-@media screen and (max-width: 1500px) {
-  .projects__container {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  .projects__container {
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .projects__container {
-    grid-template-columns: 1fr;
-  }
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*стилизация контактов*/
