--- a/howTo/page/evrodom/scss/index.scss
+++ b/howTo/page/evrodom/scss/index.scss
@@ -439,25 +439,49 @@ ul.advantages__item__text > li {
     }
 }
 
-.projects__container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-    grid-gap: 2em;
-    justify-items: center;
-    @media screen and (max-width: 2300px) {
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
-    @media screen and (max-width: 1500px) {
-        grid-template-columns: 1fr 1fr 1fr ;
-    }
-    @media screen and (max-width: 1200px) {
-        grid-template-columns: 1fr 1fr;
-    }
-    @media screen and (max-width: 800px) {
-        grid-template-columns: 1fr;
-    }
-}
+// .projects__container {
+//     display: grid;
+//     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+//     grid-gap: 2em;
+//     justify-items: center;
+//     @media screen and (max-width: 2300px) {
+//         grid-template-columns: 1fr 1fr 1fr 1fr;
+//     }
+//     @media screen and (max-width: 1500px) {
+//         grid-template-columns: 1fr 1fr 1fr ;
+//     }
+//     @media screen and (max-width: 1200px) {
+//         grid-template-columns: 1fr 1fr;
+//     }
+//     @media screen and (max-width: 800px) {
+//         grid-template-columns: 1fr;
+//     }
+// }
 
+/*add swiperJS*/
+.swiper-container {
+    width: 100%;
+    height: 100%;
+  }
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+
+    /* Center slide text vertically */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
 /*стилизация контактов*/
 
 .contact__phone {
