add margin-bottom for evrofom

--- a/howTo/page/evrodom/scss/index.scss
+++ b/howTo/page/evrodom/scss/index.scss
@@ -549,6 +549,7 @@ a.contact__link {
 
 .contact__map {
     display: block;
+    margin-bottom: 10px;
     width: 50%;
     height: 500px;
     @media screen and (max-width: 680px){
