--- a/howTo/page/ShapeUp/css/index.css
+++ b/howTo/page/ShapeUp/css/index.css
@@ -212,7 +212,7 @@ a {
   width: 60px;
   height: 2px;
   background-color: #F80759;
-  margin-left: 921px;
+  margin: 0 auto;
   margin-top: 25px;
 }
 
@@ -250,7 +250,7 @@ a {
   width: 60px;
   height: 2px;
   background-color: #F80759;
-  margin-left: 915px;
+  margin: 0 auto;
   margin-top: 25px;
 }
 
@@ -301,4 +301,185 @@ a {
 .programs__item__link:hover {
   background-color: #F80759;
 }
+
+/*reviews*/
+.reviews {
+  background-image: url(../img/reviews1.png);
+}
+
+.reviews__subtitle {
+  color: #12C2E9;
+  padding-top: 75px;
+  font-size: 18px;
+  text-align: center;
+}
+
+.reviews__title {
+  color: white;
+  font-size: 30px;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.reviews__line {
+  width: 60px;
+  height: 2px;
+  background-color: #F80759;
+  margin: 0 auto;
+  margin-top: 25px;
+}
+
+.reviews__items {
+  display: flex;
+  justify-content: space-around;
+  padding: 50px 0;
+}
+
+.reviews__item {
+  display: flex;
+  background-color: #222222;
+  width: 750px;
+}
+
+.reviews__item__text__name {
+  color: #12C2E9;
+  font-size: 18px;
+  margin-top: 30px;
+  margin-left: 25px;
+}
+
+.reviews__item__text__position {
+  font-size: 10px;
+  color: white;
+  margin-top: 7px;
+  margin-left: 25px;
+}
+
+.reviews__item__text__main {
+  font-size: 12px;
+  color: white;
+  margin-top: 35px;
+  padding: 25px;
+}
+
+.rating {
+  font-family: fontawesome;
+  color: #F80759;
+  font-size: 10px;
+  margin-left: 25px;
+}
+
+.fas {
+  margin-right: 5px;
+}
+
+/*gallery*/
+.gallery {
+  display: flex;
+  height: 400px;
+  justify-content: space-around;
+  align-items: center;
+  background-color: #222222;
+}
+
+.gallery img {
+  width: 270px;
+  height: 270px;
+}
+
+/*price*/
+.price {
+  background-color: #101010;
+}
+
+.price__subtitle {
+  font-size: 18px;
+  color: #12C2E9;
+  text-align: center;
+  padding-top: 100px;
+}
+
+.price__title {
+  font-size: 30px;
+  color: white;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.price__line {
+  width: 60px;
+  height: 2px;
+  background-color: #F80759;
+  margin: 0 auto;
+  margin-top: 25px;
+}
+
+.price__items {
+  display: flex;
+  justify-content: space-around;
+  width: 1139px;
+  margin: 0 auto;
+}
+
+.price__item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 360px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.price__item__number {
+  color: white;
+  font-size: 20px;
+}
+
+.price__item__number > span {
+  font-size: 34px;
+  font-weight: 600;
+}
+
+.price__item__period {
+  margin-top: 20px;
+  display: block;
+  width: 100%;
+  text-align: center;
+  padding: 5px;
+  font-size: 18px;
+  color: white;
+  background-color: #222222;
+}
+
+.price__item__facilities {
+  margin-top: 20px;
+  list-style: none;
+  text-align: center;
+  color: white;
+  font-size: 14px;
+  line-height: 2.4;
+}
+
+.price__link {
+  margin-top: 20px;
+  font-size: 12px;
+  padding: 5px 15px;
+  border: 1px solid #F80759;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.price__item:hover {
+  border: 1px solid #12C2E9;
+}
+
+.price__item:hover .price__item__period {
+  background-color: #F80759;
+}
+
+.price__item:hover .price__link {
+  background-color: #F80759;
+}
+
+/*Blog*/
 /*# sourceMappingURL=index.css.map */
