--- a/howTo/page/ShapeUp/scss/index.scss
+++ b/howTo/page/ShapeUp/scss/index.scss
@@ -499,6 +499,86 @@ a {
 
 /*Blog*/
 
+.blog {
+    background-color: #222222;
+}
+
+.blog__subtitle {
+    font-size: 18px;
+    color: $whiteBlue;
+    text-align: center;
+    padding-top: 50px;
+}
+
+.blog__title {
+    font-size: 30px;
+    color: white;
+    text-align: center;
+    margin-top: 10px;
+}
+
+.blog__line {
+    width: 60px;
+    height: 2px;
+    background-color: $whiteRed;
+    margin: 0 auto;
+    margin-top: 25px;
+}
+
+.blog__items {
+    display: flex;
+    justify-content: space-around;
+    padding-top: 50px;
+    
+}
+
+.blog__item {
+    width: 260px;
+}
+
+.blog__item__img {
+    display: block;
+    width: 260px;
+    height: 200px;
+    margin: 0 auto;
+}
+
+.blog__item__position {
+    font-size: 12px;
+    color: $whiteRed;
+    margin-top: 35px;
+    margin-left: 20px;
+}
+
+.blog__item__title {
+    font-size: 18px;
+    color: white;
+    margin-top: 10px;
+    margin-left: 20px;
+}
+
+.blog__item__text {
+    color: white;
+    font-size: 12px;
+    margin-top: 15px;
+    margin-left: 20px;
+}
+
+.blog__item__link {
+    font-size: 14px;
+    color: $whiteRed;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+
+.blog__item__name {
+    font-size: 14px;
+    color: $whiteBlue;
+    margin-top: 25px;
+    margin-left: 20px;
+    padding-bottom: 50px;
+}
+
 
 
 
