--- a/howTo/page/ShapeUp/scss/index.scss
+++ b/howTo/page/ShapeUp/scss/index.scss
@@ -24,13 +24,15 @@ a {
 
 /*logo*/
 
-.logo>p {
+
+
+.logo > p {
     display: inline;
     font-size: 36px;
     margin-left: 10px;
 }
 
-.logo>span {
+.logo > span {
     display: inline;
     font-size: 36px;
     color: $whiteRed;
@@ -38,7 +40,7 @@ a {
 
 .logo {
     display: inline-block;
-    width: 185px;
+    width: 200px;
     height: 44px;
     margin-top: 28px;
     margin-left: 390px;
@@ -628,7 +630,7 @@ a {
 /*footer*/
 
 .footer__items {
-    background-color: #222222;
+    background-color: black;
     display: flex;
 }
 
@@ -676,6 +678,19 @@ a {
 .footer__item__follows__link {
     margin-right: 15px;
     font-size: 25px;
+}
+
+.footer__item__title {
+    margin-top: 77px;
+    margin-bottom: 40px;
+}
+
+.footer__item__adress li{
+    color: white;
+    list-style: none;
+    font-size: 14px;
+    padding-top: 15px;
+    margin-left: 365px;
 }
 
 
