add .pug for header

--- a/project/src/pug/pages/index.pug
+++ b/project/src/pug/pages/index.pug
@@ -8,8 +8,11 @@ html(lang="en")
         link(rel="stylesheet", href="css/main.css")
     body
         header.header
-            .header__social
-                a(href="#")
-                a(href="#")
-                a(href="#") 
-
+            .header--social
+                a(href="#" class="header--social--link")
+                a(href="#" class="header--social--link")
+                a(href="#" class="header--social--link") 
+            h1.header--title Hipsum Blog
+            .heder--buttons
+                a(href="#" class="header--buttons--item")
+                a(href="#" class="header--buttons--item")
