--- a/project/src/pug/pages/index.pug
+++ b/project/src/pug/pages/index.pug
@@ -16,3 +16,51 @@ html(lang="en")
             .heder--buttons
                 a(href="#" class="header--buttons--item")
                 a(href="#" class="header--buttons--item")
+        main
+            article.text
+                h1.text--title Gastropub ennui keytar, plaid meggings marfa edison bulb pour-over austin enamel pin.
+                p.text--subtitle NOVEMBER 28, 2019 — 12 COMMENTS
+                .text--img
+                .text--text Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut maxime expedita assumenda dicta tempora ipsa itaque. Officia veritatis odio facilis recusandae cum amet totam vitae! Cumque libero voluptatibus vel odio aliquam praesentium doloribus architecto nesciunt perferendis, ipsam eos in! Ex, eius illum, eos nam quam nemo doloremque, animi sint consequatur laborum nesciunt. Aliquid asperiores veritatis odio, inventore architecto ipsum accusantium esse ex minus, suscipit sed! Odit accusamus maxime officiis doloremque illum quod, perspiciatis amet numquam? Fuga consectetur delectus autem repudiandae beatae, suscipit numquam mollitia commodi debitis atque magnam consequatur sit repellat esse quo modi. Blanditiis veritatis distinctio a sequi at.
+            article.comment
+                h2.comment--title Comment it:
+                input( class="comment--text" type='text')
+                .comment--items
+                    input(type="text")
+                    input(type="text")
+                    input(type="text")
+                a(class="comment--link" href="#")
+            article.other-comments
+                .other-comments--item
+                    p.other-comments--item--name Nina Ricci
+                    p.other-comments--item--text Locavore keffiyeh kickstarter fashion axe vaporware, fam vexillologist chambray +1 gastropub man braid leggings aesthetic literally lumbersexual. 
+                .other-comments--item
+                    p.other-comments--item--name Joe Campbel
+                    p.other-comments--item--text Locavore keffiyeh kickstarter fashion axe vaporware, fam vexillologist chambray +1 gastropub man braid leggings aesthetic literally lumbersexual.
+                .other-comments--item
+                    p.other-comments--item--name Luke Besson
+                    p.other-comments--item--text Locavore keffiyeh kickstarter fashion axe vaporware, fam vexillologist chambray +1 gastropub man braid leggings aesthetic literally lumbersexual.
+                .other-comments--item
+                    p.other-comments--item--name Tim Hendrix
+                    p.other-comments--item--text Locavore keffiyeh kickstarter fashion axe vaporware, fam vexillologist chambray +1 gastropub man braid leggings aesthetic literally lumbersexual.
+                .other-comments--item
+                    p.other-comments--item--name Walt Bezos
+                    p.other-comments--item--text Locavore keffiyeh kickstarter fashion axe vaporware, fam vexillologist chambray +1 gastropub man braid leggings aesthetic literally lumbersexual.
+        footer
+            .footer-item 
+                a(href="#") Latest Posts
+                a(href="#") Popular Posts
+            .footer-item 
+                a(href="#") Search
+                a(href="#") Contact Information
+            .footer-item 
+                a(href="#") Privacy Policy
+                a(href="#") Terms of Use
+            .footer--social
+                a(href="#") I
+                a(href="#") T
+                a(href="#") F
+        p.copyright © Copyright 2019. All rights reserved.
+                
+
+                
