finish hipsum blog

--- a/project/src/pug/pages/index.pug
+++ b/project/src/pug/pages/index.pug
@@ -36,35 +36,43 @@ html(lang="en")
                     input(class="comment--items--homepage" type="text" placeholder="Homepage")
                 a(class="comment--link" href="#") COMMENT
             article.other-comments
+                p.other-comments--title Other comments:
                 .other-comments--item
                     p.other-comments--item--name Nina Ricci
                     p.other-comments--item--text Locavore keffiyeh kickstarter fashion axe vaporware, fam vexillologist chambray +1 gastropub man braid leggings aesthetic literally lumbersexual. 
+                    .other-comment--item--line
                 .other-comments--item
                     p.other-comments--item--name Joe Campbel
                     p.other-comments--item--text Locavore keffiyeh kickstarter fashion axe vaporware, fam vexillologist chambray +1 gastropub man braid leggings aesthetic literally lumbersexual.
+                    .other-comment--item--line
                 .other-comments--item
                     p.other-comments--item--name Luke Besson
                     p.other-comments--item--text Locavore keffiyeh kickstarter fashion axe vaporware, fam vexillologist chambray +1 gastropub man braid leggings aesthetic literally lumbersexual.
+                    .other-comment--item--line
                 .other-comments--item
                     p.other-comments--item--name Tim Hendrix
                     p.other-comments--item--text Locavore keffiyeh kickstarter fashion axe vaporware, fam vexillologist chambray +1 gastropub man braid leggings aesthetic literally lumbersexual.
+                    .other-comment--item--line
                 .other-comments--item
                     p.other-comments--item--name Walt Bezos
                     p.other-comments--item--text Locavore keffiyeh kickstarter fashion axe vaporware, fam vexillologist chambray +1 gastropub man braid leggings aesthetic literally lumbersexual.
         footer
-            .footer-item 
+            .footer--item 
                 a(href="#") Latest Posts
                 a(href="#") Popular Posts
-            .footer-item 
+            .footer--item 
                 a(href="#") Search
                 a(href="#") Contact Information
-            .footer-item 
+            .footer--item 
                 a(href="#") Privacy Policy
                 a(href="#") Terms of Use
             .footer--social
-                a(href="#") I
-                a(href="#") T
-                a(href="#") F
+                a(href="#")
+                    img(src="img/instagram.jpg", alt="")
+                a(href="#")
+                    img(src="img/facebook.jpg", alt="") 
+                a(href="#") 
+                    img(src="img/twitter.jpg", alt="")
         p.copyright © Copyright 2019. All rights reserved.
 
     script(src="https://kit.fontawesome.com/7f4db95764.js" crossorigin="anonymous")
