finish layaut header

--- a/BlogMainPage/src/scss/main.scss
+++ b/BlogMainPage/src/scss/main.scss
@@ -6,4 +6,16 @@
 //Bloks
 @import "./blocks/base";
 @import "./blocks/header";
-@import "./blocks/social-icons"
+@import "./blocks/social-icons";
+@import "./blocks/logo";
+@import "./blocks/buttons";
+
+
+
+
+
+
+//font-family: 'Exo 2', sans-serif;
+//font-family: 'Montserrat', sans-serif;
+//font-family: 'Playfair Display', serif;
+
