--- a/BlogMainPage/src/pug/sections/header.pug
+++ b/BlogMainPage/src/pug/sections/header.pug
@@ -7,4 +7,8 @@ header.header
 
     .header__logo
         h1.logo Hipsum Blog
-    .header__search Иконка и кнопка
+    .header__search
+        .header__search-icon
+            img(src="./img/icons/search.svg", alt="Search", width="26")
+        .header__search-subscribe
+            button.button-rounded Subscribe
