start layaut posts

--- a/BlogMainPage/src/pug/pages/index.pug
+++ b/BlogMainPage/src/pug/pages/index.pug
@@ -5,3 +5,14 @@ block variables
 
 block content
     include ./../sections/header.pug
+
+    .container
+        .row
+            .col-9
+
+                article.post 
+
+
+
+
+            .col-3 SIDEBAR
