--- a/BlogMainPage/src/scss/main.scss
+++ b/BlogMainPage/src/scss/main.scss
@@ -12,6 +12,9 @@
 @import "./blocks/post";
 @import "./blocks/share-icons";
 @import "./blocks/pagination";
+@import "./blocks/widget";
+@import "./blocks/post-widget";
+
 
 
 
